--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,14 @@
 </head>
 
 <body class="main__body">
-    <!-- Header -->
-    @@include('./html/_header.html')
+    <div class="header__wrapper">
+        <!-- Header -->
+        @@include('./html/_header.html')
+    </div>
 
     <!-- Main Page -->
     <main>
-        
+
     </main>
 
     <!-- Footer -->
