--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -11,7 +11,9 @@
                 </ul>
 
                 <div class="nav__controlls">
-                    <div class="select">EN</div>
+                    <div id="select">
+                        <input type="hidden" class="hidden__input">
+                    </div>
 
                     <div class="nav__buttons">
                         <a class="btn btn__primary nav__btn" href="#" >Start free trial</a>
