--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,13 @@
     <div class="header__wrapper">
         <!-- Header -->
         @@include('./html/_header.html')
+         <!-- Hero section -->
+         @@include('./html/_hero.html')
     </div>
 
     <!-- Main Page -->
     <main>
-
+       
     </main>
 
     <!-- Footer -->
