--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
          @@include('./html/_hero.html')
     </div>
 
-    <!-- Main Page -->
+    
     <main>
-       
+        <!-- Story section -->
+        @@include('./html/_story.html')
     </main>
 
     <!-- Footer -->
