--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <main>
         <!-- Story section -->
         @@include('./html/_story.html')
+        <!-- Features section -->
+        @@include('./html/_features.html')
     </main>
 
     <!-- Footer -->
