--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
         @@include('./html/_story.html')
         <!-- Features section -->
         @@include('./html/_features.html')
+        <!-- Test section -->
+        <!-- @@include('./html/_features.html') -->
     </main>
 
     <!-- Footer -->
