Pricing section Heading and switcher

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
         @@include('./html/_story.html')
         <!-- Features section -->
         @@include('./html/_features.html')
-        <!-- Test section -->
-        <!-- @@include('./html/_features.html') -->
+        <!-- Pricing section -->
+        @@include('./html/_pricing.html')
     </main>
 
     <!-- Footer -->
