--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
         @@include('./html/_features.html')
         <!-- Pricing section -->
         @@include('./html/_pricing.html')
+        <!-- Learn section -->
+        @@include('./html/_learn.html')
     </main>
 
     <!-- Footer -->
