--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
         @@include('./html/_pricing.html')
         <!-- Learn section -->
         @@include('./html/_learn.html')
+        <!-- Reviews section -->
+        @@include('./html/_reviews.html')
     </main>
 
     <!-- Footer -->
