--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
         @@include('./html/_learn.html')
         <!-- Reviews section -->
         @@include('./html/_reviews.html')
+        <!-- FAQ section -->
+        @@include('./html/_faq.html')
     </main>
 
     <!-- Footer -->
