--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,52 @@
 <footer>
     <div class="container">
-        <div class="footer">Footer</div>
+        <div class="footer">
+            <div class="footer__item">
+                <ul class="footer__list">
+                    <li class="footer__title">Company</li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Main</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">How it works</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Pricing</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">FAQ</a></li>
+                </ul>
+
+                <ul class="footer__list">
+                    <li class="footer__title">Legal</li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Claim</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Privacy</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Terms</a></li>
+                </ul>
+
+                <ul class="footer__list">
+                    <li class="footer__title">Support</li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Pricing</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Documentation</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">Guides</a></li>
+                    <li class="footer__list-item"><a class="footer__link" href="#">API Status</a></li>
+                </ul>
+            </div>
+            <div class="footer__item">
+                <form class="footer__form">
+                    <div class="footer__title">Subscribe to our newsletter!</div>
+                    <div class="footer__text">The latest news, articles, and resources, sent to your inbox weekly.</div>
+                    <label class="footer__form-label">
+                        <input class="footer__form-input" type="text" placeholder="Your Email">
+                        <button class="footer__form-btn" type="submit">Learn more</button>
+                    </label>
+                </form>
+            </div>
+        </div>
+
+        <div class="footer__bottom">
+            <div class="footer__bottom-item">© 2022 All rights reserved.</div>
+            <div class="footer__bottom-item">
+                <ul class="footer__bottom-list">
+                    <li class="social"><a class="social__link" href="#"><img src="../img/social-fb.svg" alt="icon"></a></li>
+                    <li class="social"><a class="social__link" href="#"><img src="../img/social-insta.svg" alt="icon"></a></li>
+                    <li class="social"><a class="social__link" href="#"><img src="../img/social-twitter.svg" alt="icon"></a></li>
+                    <li class="social"><a class="social__link" href="#"><img src="../img/social-ball.svg" alt="icon"></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </footer>
