--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <!-- Footer -->
-    <!-- @@include('./html/_footer.html') -->
+    @@include('./html/_footer.html')
 
 </body>
 
